add Common Calculate method and test

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,19 @@ apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
+buildscript {
+    repositories {
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+        }
+        mavenCentral()
+    }
+}
+
 repositories {
+    maven {
+        url 'http://maven.aliyun.com/nexus/content/groups/public/'
+    }
     mavenCentral()
 }
 
